--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@
   display: flex;
   gap: 10px;
   width: 80%;
-  margin: 0 auto 15px auto ;
+  margin: 0 auto 15px 150px ;
 }
 
 .grid {
@@ -72,7 +72,7 @@
   grid-template-columns: 2fr 5fr;
   gap: 15px;
   width: 80%;
-  margin: 0 auto 15px auto ;
+  margin: 0 auto 15px 150px ;
   
 }
 
